Refactor: Moved margins and dimensions into dimes.xml files and referred to them in the layout files to make it easier to cater to different screen sizes Feat: Created new values for different sized screens to keep it looking good on phones and tablets etc Design: Stopped the toolbar extending in landscape view as it used too much screen space Fix: Moved the call to .setPreDrawListener to the bindViews method of ArticleDetailFragment to try and stop it missing the transition due to the elements not being loaded. It now sometimes pauses the UI so I think the solution is in faster image loading and caching Design: Changed the fonts in the list items to Roboto

--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -1,13 +1,45 @@
 <resources>
-    <!-- detail -->
+    <!-- text -->
+    <dimen name="list_title_text_size">14sp</dimen>
+    <dimen name="list_subtitle_text_size">12sp</dimen>
+
     <dimen name="detail_title_text_size">28sp</dimen>
     <dimen name="detail_body_text_size">12sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
+    <!-- elevation -->
     <dimen name="fab_elevation">6dp</dimen>
     <dimen name="fab_press_translation_z">12dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="init_scroll_up_distance">32dp</dimen>
 
+    <!-- padding -->
+    <dimen name="toolbar_extended">128dp</dimen>
+
+    <dimen name="logo_start">24dp</dimen>
+    <dimen name="logo_end">24dp</dimen>
+    <dimen name="logo_bottom">4dp</dimen>
+
+    <!-- this plus article padding -->
+    <dimen name="list_start">12dp</dimen>
+    <dimen name="list_end">12dp</dimen>
+
+    <dimen name="article_start">4dp</dimen>
+    <dimen name="article_end">4dp</dimen>
+    <dimen name="article_top">8dp</dimen>
+    <dimen name="article_bottom">0dp</dimen>
+
+    <dimen name="article_title_start">8dp</dimen>
+    <dimen name="article_title_end">8dp</dimen>
+    <dimen name="article_title_top">4dp</dimen>
+    <dimen name="article_title_bottom">4dp</dimen>
+
+    <dimen name="article_subtitle_start">8dp</dimen>
+    <dimen name="article_subtitle_end">8dp</dimen>
+    <dimen name="article_subtitle_top">4dp</dimen>
+    <dimen name="article_subtitle_bottom">4dp</dimen>
+
+    <!-- dimensions -->
+    <dimen name="action_up_image_width">56dp</dimen>
 </resources>
