Refactor: Moved Fab size to dimens.xml Design: Moved Fab element from the fragment_article_detail to the activity_article_detail so that it doesn't swipe left and right with the fragment Feat: Added information specific to article in the share text but am having issues with it displaying the correct title after swiping between fragments. Moved the onClick to the ArticleDetailActivity but now it seems to be showing one article over when swiping... two steps forward, one step back

--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -42,4 +42,5 @@
 
     <!-- dimensions -->
     <dimen name="action_up_image_width">56dp</dimen>
+    <dimen name="fab_image_width">56dp</dimen>
 </resources>
