Fix: Share button was showing the incorrect title after swiping because mTitleText was also being set in setPrimaryItem, which is called multiple times and doesn't do what I initially thought it did. Removing it out of there has solved the issue Feat: Added a snackbar that shows up when an article is shared by changing the startActivity in the onClick method for the button, to a startActivityForResult. Then the snackbar was created in onActivityResult Feat: To make the FAB move up when the snackbar appears the FrameLayout in activity_article_detail was changed to a CoordinatorLayour and the Imagebutton that made the FAB was changed to the android.support.design.widget.FloatingActionButton so it would react properly within the coordinatorLayout Fix: Removed the on-screen back button to conform to the Android Nanodegree General Project Guidelines (Navigation, point 1) Chore: Cleaned up unused font assets Fix: StartId was not being recorded and passed between activites properly. This is now fixed. Refactor: Made ID variable names consistant across classes and changed the ID being used with the transition to the position instead of the _ID so that it can hopefully be used to scroll the list when going back after swiping to a fragment which links to an article that is off screen Fix: Recycler View was reusing views at the bottom so when the ID was being concatenated onto the old transition name it was unintentially building an extra long transition name. Fixed by only using the ID for the transition name. Have removed the hardcoded transition name Design: Changed the amount of columns in landscape mode to three to better use the space

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="grey_600">#757575</color>
     <color name="grey_900">#212121</color>
 
-
+    <color name="blank">#00000000</color>
+    <color name="black">#4d000000</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
