Fix: Using the position as the ID wasn't very reliable so created a string resource and used it to make the transition name and tag unique. This also fixed the issue where swiping through fragments would cause the return shared element transition not to work (which broke during the previous changes) Chore: Deleted unused resources Chore: Cleaned up XML files and moved dimensions from the macro_layout xml files to the dimens xml files so they're all together Design: Made changes to dimensions to better conform to the material design specifications Design: Added elevation attributes for cards in the dimensions xml to better conform to the material design specifications Fix: Added a bools.xml to distinguish between tablet and phone layouts and then used this to load the higher res photos on the tablet Fix: Updated okhttp and added okhttp-urlconnection to build.gradle. This seems to have fixed the loading issue on emulators Chore: Added a README file to the project Chore: Commented out all the info logs used during debugging Refactor: Moved some leftover strings out of the code and into strings.xml. Also moved some colours into the color.xml file

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -33,8 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:maxWidth="@dimen/detail_card_max_width"
-                android:background="#fff"
-                android:elevation="2dp"
+                android:background="@color/white"
+                android:elevation="@dimen/max_width_linear_layout"
                 android:layout_marginTop="@dimen/detail_card_top_margin">
 
                 <LinearLayout
@@ -56,17 +56,17 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                         android:fontFamily="sans-serif-condensed"
-                        android:textColor="#fff"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="@dimen/detail_title_text_size"
-                        android:lineSpacingMultiplier="0.9" />
+                        android:lineSpacingMultiplier="@dimen/line_spacing_mult" />
 
                     <TextView
                         android:id="@+id/article_byline"
                         style="?android:attr/textAppearanceSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#8fff" />
+                        android:textColor="@color/grey" />
                 </LinearLayout>
 
                 <TextView
