--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -1,11 +1,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/article_bottom"
     android:layout_marginStart="@dimen/article_end"
     android:layout_marginEnd="@dimen/article_start"
     android:layout_marginTop="@dimen/article_top"
+    android:elevation="@dimen/card_elevation"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:ellipsize="end"
-                android:maxLines="2"
+                android:maxLines="@integer/title_max_lines"
                 android:paddingStart="@dimen/article_title_start"
                 android:paddingEnd="@dimen/article_title_end"
                 android:paddingBottom="@dimen/article_title_bottom"
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="@integer/subtitle_max_lines"
                 android:paddingStart="@dimen/article_subtitle_start"
                 android:paddingEnd="@dimen/article_subtitle_end"
                 android:paddingBottom="@dimen/article_subtitle_bottom"
