--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -1,29 +1,23 @@
 <resources>
     <!-- text -->
     <dimen name="list_title_text_size">16sp</dimen>
-    <dimen name="list_subtitle_text_size">12sp</dimen>
+    <dimen name="list_subtitle_text_size">14sp</dimen>
 
-    <dimen name="detail_title_text_size">42sp</dimen>
-    <dimen name="detail_body_text_size">20sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
 
     <!-- elevation -->
-    <dimen name="fab_elevation">6dp</dimen>
-    <dimen name="fab_press_translation_z">12dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
-
-    <dimen name="init_scroll_up_distance">32dp</dimen>
 
     <!-- padding -->
     <dimen name="toolbar_extended">256dp</dimen>
 
-    <dimen name="logo_start">72dp</dimen>
-    <dimen name="logo_end">72dp</dimen>
+    <dimen name="logo_start">52dp</dimen>
+    <dimen name="logo_end">52dp</dimen>
     <dimen name="logo_bottom">4dp</dimen>
 
     <!-- this plus article padding -->
-    <dimen name="list_start">48dp</dimen>
-    <dimen name="list_end">48dp</dimen>
+    <dimen name="list_start">44dp</dimen>
+    <dimen name="list_end">44dp</dimen>
 
     <dimen name="article_start">8dp</dimen>
     <dimen name="article_end">8dp</dimen>
@@ -32,15 +26,19 @@
 
     <dimen name="article_title_start">16dp</dimen>
     <dimen name="article_title_end">16dp</dimen>
-    <dimen name="article_title_top">8dp</dimen>
-    <dimen name="article_title_bottom">8dp</dimen>
+    <dimen name="article_title_top">16dp</dimen>
+    <dimen name="article_title_bottom">16dp</dimen>
 
     <dimen name="article_subtitle_start">16dp</dimen>
     <dimen name="article_subtitle_end">16dp</dimen>
-    <dimen name="article_subtitle_top">8dp</dimen>
-    <dimen name="article_subtitle_bottom">8dp</dimen>
+    <dimen name="article_subtitle_top">16dp</dimen>
+    <dimen name="article_subtitle_bottom">16dp</dimen>
 
-    <!-- dimensions -->
-    <dimen name="action_up_image_width">56dp</dimen>
-    <dimen name="fab_image_width">56dp</dimen>
+    <!-- detail -->
+    <dimen name="detail_photo_height">384dp</dimen>
+    <dimen name="detail_card_top_margin">384dp</dimen>
+    <dimen name="detail_inner_horiz_margin">64dp</dimen>
+    <dimen name="detail_metabar_vert_padding">32dp</dimen>
+    <dimen name="detail_metabar_title_bottom_padding">8dp</dimen>
+    <dimen name="detail_body_bottom_margin">96dp</dimen>
 </resources>
