--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,17 +18,15 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="deep_orange_100">#FFCCBC</color>
     <color name="deep_orange_500">#FF5722</color>
     <color name="deep_orange_700">#E64A19</color>
     <color name="light_blue_a400">#00B0FF</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="grey_400">#BDBDBD</color>
+    <color name="grey">#88FFFFFF</color>
     <color name="grey_600">#757575</color>
     <color name="grey_900">#212121</color>
 
     <color name="blank">#00000000</color>
     <color name="black">#4d000000</color>
-    <color name="ltgray">#ffe0e0e0</color>
 </resources>
